--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.17.1",
     "cleverbot-node": "^0.3.6",
     "cluster": "^0.7.7",
+    "connect": "^3.6.2",
     "cors": "^2.8.3",
     "discord.js": "^11.1.0",
     "express": "^4.15.2",
@@ -25,8 +26,10 @@
     "passport": "^0.3.2",
     "passport-discord": "^0.1.2",
     "passport.socketio": "^3.7.0",
+    "serve-static": "^1.12.3",
     "socket.io": "^2.0.1",
     "sqlite": "^2.5.0",
+    "static-server": "^2.0.4",
     "unirest": "^0.5.1",
     "youtube-node": "^1.3.0",
     "ytdl-core": "^0.11.2"
