--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 
 {
   "prefix": "/",
-  "secret":"BC6FVDqWUBEkWiJgU1a5K6ku1x4n6dTB",
+  "secret":"",
   "owner": "193972602392281088",
-  "token": "MzIxOTA5OTY1MjAxNjA0NjEx.DBk5iQ.syG1pdPr8Pg5AHhFcmSnGq5vWaE",
+  "token": "",
   "client_id": "321909965201604611",
   "controller_role_name": "Bot Operator",
   "administrator_role_name": "Administrator",
   "clbotkey": "",
-  "gapikey": "AIzaSyBXk8E6cttMfLElTVMpll1ahSukn1jhwrQ",
+  "gapikey": "",
   "discordbotstoken": "",
   "invitelink": "https://discordapp.com/oauth2/authorize?client_id=321909965201604611&scope=bot&permissions=2146958463",
   "botsdiscordtoken": "",
