--- a/config.json
+++ b/config.json
@@ -2,7 +2,19 @@
 {
   "prefix": "/",
   "secret":"",
-  "owner": "193972602392281088",
+  "owners": [
+    "193972602392281088",
+    "239738897985175552",
+    "210683612369125386",
+    "229232856063410176"
+    ],
+  "developers" : [
+    "178409772436029440",
+    "236002091120721930",
+    "258971374511587329",
+    "321193377951645699",
+    "150707175214415872"
+    ],
   "token": "",
   "client_id": "321909965201604611",
   "controller_role_name": "Bot Operator",
