--- a/package.json
+++ b/package.json
@@ -6,37 +6,6 @@
   "author": "haxmat",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "cleverbot-node": "^0.3.6",
-    "cluster": "^0.7.7",
-    "connect": "^3.6.2",
-    "cors": "^2.8.3",
-    "discord.js": "^11.1.0",
-    "ejs": "^2.5.6",
-    "express": "^4.15.3",
-    "express-minify": "^0.2.0",
-    "figlet": "^1.2.0",
-    "fs": "0.0.1-security",
-    "g-i-s": "^2.0.0",
-    "got": "^7.0.0",
-    "json-web-token": "^2.1.3",
-    "jsonwebtoken": "^7.4.0",
-    "mathjs": "^3.12.1",
-    "moment": "^2.18.1",
-    "ms": "^1.0.0",
-    "node-opus": "^0.2.6",
-    "os": "^0.1.1",
-    "passport": "^0.3.2",
-    "passport-discord": "^0.1.2",
-    "passport.socketio": "^3.7.0",
-    "requestify": "^0.2.5",
-    "serve-static": "^1.12.3",
-    "socket.io": "^2.0.1",
-    "sqlite": "^2.5.0",
-    "static-server": "^2.0.4",
-    "unirest": "^0.5.1",
-    "url": "^0.11.0",
-    "youtube-node": "^1.3.0",
-    "ytdl-core": "^0.11.2"
+    "discord.js": "^11.1.0"
   }
 }
