--- a/package.json
+++ b/package.json
@@ -6,6 +6,18 @@
   "author": "haxmat",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.1.0"
+    "cleverbot-node": "^0.3.10",
+    "discord.js": "^11.1.0",
+    "express": "^4.15.3",
+    "figlet": "^1.2.0",
+    "g-i-s": "^2.0.0",
+    "mathjs": "^3.13.3",
+    "moment": "^2.18.1",
+    "node-opus": "^0.2.6",
+    "requestify": "^0.2.5",
+    "sqlite": "^2.8.0",
+    "unirest": "^0.5.1",
+    "youtube-node": "^1.3.0",
+    "ytdl-core": "^0.14.4"
   }
 }
