--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cleverbot-node": "^0.3.10",
     "discord.js": "^11.1.0",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "figlet": "^1.2.0",
     "g-i-s": "^2.0.0",
