--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TerraBite",
-  "version": "1.6.9",
+  "version": "2.0.0 Beta",
   "description": "",
   "main": "start.js",
   "author": "haxmat",
