--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "TerraBite",
-  "version": "2.0.0 Beta",
-  "description": "",
-  "main": "start.js",
-  "author": "haxmat",
+  "version": "2.0.0",
+  "description": "Hard drives spinning.",
+  "main": "app.js",
+  "author": "TerraBite Development Group",
   "license": "ISC",
   "dependencies": {
     "cleverbot-node": "^0.3.10",
+    "cluster": "^0.7.7",
+    "colors": "^1.1.2",
     "discord.js": "^11.1.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "figlet": "^1.2.0",
     "g-i-s": "^2.0.0",
     "mathjs": "^3.13.3",
+    "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "node-opus": "^0.2.6",
     "requestify": "^0.2.5",
     "sqlite": "^2.8.0",
     "unirest": "^0.5.1",
+    "winston": "^2.3.1",
     "youtube-node": "^1.3.0",
     "ytdl-core": "^0.14.4"
   }
