--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "cleverbot-node": "^0.3.10",
     "cluster": "^0.7.7",
     "colors": "^1.1.2",
+    "cookie-session": "^2.0.0-beta.2",
     "discord.js": "^11.1.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "express-minify": "^0.2.0",
+    "express-session": "^1.15.3",
     "figlet": "^1.2.0",
     "g-i-s": "^2.0.0",
     "maintenance": "0.0.2",
@@ -20,6 +23,8 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "node-opus": "^0.2.6",
+    "passport": "^0.3.2",
+    "passport-discord": "^0.1.2",
     "requestify": "^0.2.5",
     "sqlite": "^2.8.0",
     "unirest": "^0.5.1",
