--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "cleverbot-node": "^0.3.10",
     "cluster": "^0.7.7",
     "colors": "^1.1.2",
+    "connect-sqlite3": "^0.9.9",
+    "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.2",
     "discord.js": "^11.1.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-minify": "^0.2.0",
     "express-session": "^1.15.3",
+    "express-session-rethinkdb": "^0.4.1",
     "figlet": "^1.2.0",
     "fs-extra": "^3.0.1",
     "g-i-s": "^2.0.0",
