--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,9 @@ bower_components
 build/Release
 
 # Dependency directories
-
+node_modules/
 jspm_packages/
+.idea/
 
 # Typescript v1 declaration files
 typings/
