--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "child_process": "^1.0.2",
     "cleverbot-node": "^0.3.10",
     "cluster": "^0.7.7",
     "colors": "^1.1.2",
@@ -17,6 +18,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-minify": "^0.2.0",
+    "express-rate-limit": "^2.8.0",
     "express-session": "^1.15.3",
     "express-session-rethinkdb": "^0.4.1",
     "figlet": "^1.2.0",
