--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-minify": "^0.2.0",
+    "express-minify-html": "^0.11.4",
     "express-rate-limit": "^2.8.0",
     "express-session": "^1.15.3",
     "express-session-rethinkdb": "^0.4.1",
